# finapp

./: .gitignore  README.md  main.py  scaffold.sh
finapp/: .dockerignore  .env  .env.example  Dockerfile  deploy.sh  pyproject.toml  start.sh
finapp/backend/: app.py  models.py  settings.py
finapp/backend/graph/: build.py  nodes.py  state.py
finapp/backend/routers/: ingest.py  ratios.py  review.py  runs.py
finapp/backend/services/: gcs.py  parsers.py  ratio_tools.py  validators.py  vertex_client.py
finapp/frontend/: streamlit_app.py
