[project]
name = "finapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "google-cloud-aiplatform>=1.70",
    "google-cloud-storage>=2.18",
    "langchain>=0.3",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pdfplumber>=0.11",
    "pillow>=10.4",
    "plotly>=5.23",
    "pydantic>=2.7",
    "pypdf>=4.2",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "requests>=2.32",
    "streamlit>=1.37",
    "uvicorn[standard]>=0.30",
]
